crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__main.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: main_diagnostics
---
{
  "kind": "full",
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 0
        },
        "end": {
          "line": 0,
          "character": 11
        }
      },
      "severity": 2,
      "code": "undefined-reveal",
      "codeDescription": {
        "href": "https://ty.dev/rules#undefined-reveal"
      },
      "source": "ty",
      "message": "`reveal_type` used without importing it/ninfo: This is allowed for debugging convenience but will fail at runtime/ninfo: rule `undefined-reveal` is enabled by default"
    },
    {
      "range": {
        "start": {
          "line": 0,
          "character": 12
        },
        "end": {
          "line": 0,
          "character": 22
        }
      },
      "severity": 3,
      "code": "revealed-type",
      "source": "ty",
      "message": "Revealed type: `Literal[/"included/"]`"
    }
  ]
}
