crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__workspace_diagnostic_after_changes.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: second_response
---
Report(
    WorkspaceDiagnosticReport {
        items: [
            Full(
                WorkspaceFullDocumentDiagnosticReport {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "<temp_dir>/src/changed_error.py",
                        query: None,
                        fragment: None,
                    },
                    version: Some(
                        2,
                    ),
                    full_document_diagnostic_report: FullDocumentDiagnosticReport {
                        result_id: Some(
                            "[RESULT_ID]",
                        ),
                        items: [
                            Diagnostic {
                                range: Range {
                                    start: Position {
                                        line: 1,
                                        character: 11,
                                    },
                                    end: Position {
                                        line: 1,
                                        character: 18,
                                    },
                                },
                                severity: Some(
                                    Error,
                                ),
                                code: Some(
                                    String(
                                        "invalid-return-type",
                                    ),
                                ),
                                code_description: Some(
                                    CodeDescription {
                                        href: Url {
                                            scheme: "https",
                                            cannot_be_a_base: false,
                                            username: "",
                                            password: None,
                                            host: Some(
                                                Domain(
                                                    "ty.dev",
                                                ),
                                            ),
                                            port: None,
                                            path: "/rules",
                                            query: None,
                                            fragment: Some(
                                                "invalid-return-type",
                                            ),
                                        },
                                    },
                                ),
                                source: Some(
                                    "ty",
                                ),
                                message: "Return type does not match returned value: expected `int`, found `Literal[/"hello/"]`/ninfo: rule `invalid-return-type` is enabled by default",
                                related_information: None,
                                tags: None,
                                data: None,
                            },
                        ],
                    },
                },
            ),
            Full(
                WorkspaceFullDocumentDiagnosticReport {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "<temp_dir>/src/fixed_error.py",
                        query: None,
                        fragment: None,
                    },
                    version: Some(
                        2,
                    ),
                    full_document_diagnostic_report: FullDocumentDiagnosticReport {
                        result_id: None,
                        items: [],
                    },
                },
            ),
            Full(
                WorkspaceFullDocumentDiagnosticReport {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "<temp_dir>/src/modified_same_error.py",
                        query: None,
                        fragment: None,
                    },
                    version: Some(
                        2,
                    ),
                    full_document_diagnostic_report: FullDocumentDiagnosticReport {
                        result_id: Some(
                            "[RESULT_ID]",
                        ),
                        items: [
                            Diagnostic {
                                range: Range {
                                    start: Position {
                                        line: 4,
                                        character: 11,
                                    },
                                    end: Position {
                                        line: 4,
                                        character: 13,
                                    },
                                },
                                severity: Some(
                                    Error,
                                ),
                                code: Some(
                                    String(
                                        "invalid-return-type",
                                    ),
                                ),
                                code_description: Some(
                                    CodeDescription {
                                        href: Url {
                                            scheme: "https",
                                            cannot_be_a_base: false,
                                            username: "",
                                            password: None,
                                            host: Some(
                                                Domain(
                                                    "ty.dev",
                                                ),
                                            ),
                                            port: None,
                                            path: "/rules",
                                            query: None,
                                            fragment: Some(
                                                "invalid-return-type",
                                            ),
                                        },
                                    },
                                ),
                                source: Some(
                                    "ty",
                                ),
                                message: "Return type does not match returned value: expected `str`, found `Literal[42]`/ninfo: rule `invalid-return-type` is enabled by default",
                                related_information: None,
                                tags: None,
                                data: None,
                            },
                        ],
                    },
                },
            ),
            Full(
                WorkspaceFullDocumentDiagnosticReport {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "<temp_dir>/src/new_error.py",
                        query: None,
                        fragment: None,
                    },
                    version: Some(
                        2,
                    ),
                    full_document_diagnostic_report: FullDocumentDiagnosticReport {
                        result_id: Some(
                            "[RESULT_ID]",
                        ),
                        items: [
                            Diagnostic {
                                range: Range {
                                    start: Position {
                                        line: 1,
                                        character: 11,
                                    },
                                    end: Position {
                                        line: 1,
                                        character: 13,
                                    },
                                },
                                severity: Some(
                                    Error,
                                ),
                                code: Some(
                                    String(
                                        "invalid-return-type",
                                    ),
                                ),
                                code_description: Some(
                                    CodeDescription {
                                        href: Url {
                                            scheme: "https",
                                            cannot_be_a_base: false,
                                            username: "",
                                            password: None,
                                            host: Some(
                                                Domain(
                                                    "ty.dev",
                                                ),
                                            ),
                                            port: None,
                                            path: "/rules",
                                            query: None,
                                            fragment: Some(
                                                "invalid-return-type",
                                            ),
                                        },
                                    },
                                ),
                                source: Some(
                                    "ty",
                                ),
                                message: "Return type does not match returned value: expected `str`, found `Literal[42]`/ninfo: rule `invalid-return-type` is enabled by default",
                                related_information: None,
                                tags: None,
                                data: None,
                            },
                        ],
                    },
                },
            ),
            Unchanged(
                WorkspaceUnchangedDocumentDiagnosticReport {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "<temp_dir>/src/unchanged.py",
                        query: None,
                        fragment: None,
                    },
                    version: Some(
                        1,
                    ),
                    unchanged_document_diagnostic_report: UnchangedDocumentDiagnosticReport {
                        result_id: "[RESULT_ID]",
                    },
                },
            ),
        ],
    },
)
